# fastapi-library-management

./: .env  library.db  main.py  pyproject.toml  seed.py
alembic/: env.py
alembic/versions/: 6da3fba3aad0_added_password_to_user.py  ca31b2b1ad0e_create_book_table.py  e4d59f89d861_added_user_table_and_many_to_many_link.py
app/: app.py  main.py
app/api/: deps.py
app/api/v1/: api.py
app/api/v1/endpoints/: books.py  users.py
app/core/: security.py
app/crud/: crud_book.py  crud_user.py
app/db/: session.py
app/models/: book.py  user.py
app/schemas/: book.py  user.py
